--- a/InstagramStories/InstagramStories/InstagramStories/Pages/StoriesPage.xaml
+++ b/InstagramStories/InstagramStories/InstagramStories/Pages/StoriesPage.xaml
@@ -1,12 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             xmlns:viewmodel="clr-namespace:InstagramStories.ViewModels" xmlns:local="clr-namespace:InstagramStories"
+             xmlns:viewmodel="clr-namespace:InstagramStories.ViewModels" 
+             xmlns:local="clr-namespace:InstagramStories"
              BackgroundColor="Black"
              xmlns:video="clr-namespace:FormsVideoLibrary"
              x:Class="InstagramStories.Pages.StoriesPage">
     <ContentPage.Resources>
+        <local:StoryProgressConverter x:Key="storyProgressConverter"/>
         <local:VideoSourceConverter x:Key="videoSourceConverter"/>
+        <local:ItemIndexCalculator x:Key="itemIndexConverter" ItemsSource="{Binding Path=BindingContext.Stories, Source={x:Reference parent}}"/>
         <DataTemplate x:Key="imageTemplate">
             <Image Margin="0, 50" VerticalOptions="Fill" HorizontalOptions="Fill" Source="{Binding StorySource}"/>
         </DataTemplate>
@@ -18,7 +21,6 @@
                            AreTransportControlsEnabled="False"
                            Source="{Binding StorySource, Converter={StaticResource videoSourceConverter}}" />
             </Grid>
-            <!--<WebView VerticalOptions="Fill" HorizontalOptions="Fill" Source="{Binding StorySource}"/>-->
         </DataTemplate>
         <local:StoryTemplateSelector ImageTemplate="{StaticResource imageTemplate}" VideoTemplate="{StaticResource videoTemplate}" x:Key="storySelector"/>
     </ContentPage.Resources>
@@ -26,11 +28,10 @@
         <viewmodel:StoriesViewmodel/>
     </ContentPage.BindingContext>
     <ContentPage.Content>
-            <CarouselView x:Name="parent" ItemsSource="{Binding Stories}" BackgroundColor="Black">
+            <CarouselView x:Name="parent" TabIndex="{Binding CurrentUserIndex}" ItemsSource="{Binding Stories}" BackgroundColor="Black">
                 <CarouselView.ItemTemplate>
                 <DataTemplate>
                     <Grid x:Name="userGrid">
-                       
                         <Grid x:Name="storyContainer"
                               Margin="0, 10"
                                     BindableLayout.ItemTemplateSelector="{StaticResource storySelector}"
@@ -46,12 +47,15 @@
                         <StackLayout HeightRequest="2" Margin="5, 5" Orientation="Horizontal" VerticalOptions="Start"  BindableLayout.ItemsSource="{Binding Stories}">
                             <BindableLayout.ItemTemplate>
                                 <DataTemplate>
-                                    <ProgressBar Progress="{Binding StoryProgress}" BackgroundColor="LightGray" ProgressColor="White">
-                                    </ProgressBar>
+                                    <local:ProgressBarExt 
+                                        HorizontalOptions="FillAndExpand" 
+                                        ActualProgress="{Binding Path=BindingContext.StoryProgress, Source={x:Reference parent}, Converter={StaticResource storyProgressConverter}}" 
+                                        BackgroundColor="LightGray" ProgressColor="White" MinimumProgress="{Binding Index}">
+                                    </local:ProgressBarExt>
                                 </DataTemplate>
                             </BindableLayout.ItemTemplate>
                         </StackLayout>
-                        <Label Margin="60, 10, 0, 20" VerticalTextAlignment="Center" LineBreakMode="TailTruncation" HeightRequest="50" VerticalOptions="Start" Text="{Binding Path=BindingContext, Source={x:Reference parent}}" TextColor="White"/>
+                        <Label Margin="60, 10, 0, 20" VerticalTextAlignment="Center" LineBreakMode="TailTruncation" HeightRequest="50" VerticalOptions="Start" Text="{Binding Path=BindingContext.StoryProgress, Source={x:Reference parent}}" TextColor="White"/>
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
